--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Barrio&display=swap');
+
+/* Colors */
+
+:root {
+  --primary-color: #fff;
+  --primary-dark: #747474;
+  --secondary-color: #e9e9e9;
+  --font-color: #000;
+}
+
+/* Basic CSS */
 
 * {
   box-sizing: border-box;
@@ -7,40 +19,123 @@
 
 body {
   margin: 0;
+  background: #f5f5f5;
 }
 
 .container {
   width: 90%;
   max-width: 600px;
   margin: 0 auto;
-  background: #f5f5f5;
+  background: var(--primary-color);
   padding: 40px;
   border-radius: 15px;
-  min-height: calc(100vh - 215px);
+  min-height: 600px;
+  box-shadow: 5px 5px 0 var(--secondary-color);
+
+}
+
+.btn {
+  background: var(--font-color);
+  font-size: 16px;
+  font-weight: 500;
+  text-decoration: none;
+  padding: 10px 20px;
+  display: inline-block;
+  border-radius: 5px;
+  color: var(--primary-color);
 }
 
 /* Navbar */
 .navbar {
-  background: #000051;
+  background: var(--primary-color);
   text-align: center;
   padding: 10px 5%;
-  margin-bottom: 40px;
+  border-bottom: 5px solid var(--secondary-color);
+  display: flex;
+  align-items: center;
+  margin-bottom: 60px;
 }
 
-.navbar p {
-  margin: 0;
-  color: #fff;
+.navbar .navbar-brand a {
+  display: flex;
+  align-items: flex-end;
+  text-decoration: none;
+  color: var(--font-color);
   font-size: 28px;
   font-weight: 700;
   text-transform: uppercase;
-  letter-spacing: 1px;
+  line-height: 1;
+  font-family: Barrio;
+}
+
+.navbar .navbar-brand a img {
+  width: 50px;
+  margin-right: 10px;
+}
+
+.navbar .nav-items {
+  margin-left: auto;
+  display: flex;
+  list-style: none;
+  padding: 0;
+}
+
+.navbar .nav-items li a {
+  font-size: 16px;
+  font-weight: 600;
+  color: var(--font-color);
+  text-decoration: none;
+  display: inline-block;
+  margin-right: 20px;
+}
+
+.navbar .nav-items li:last-child a {
+  margin-right: 0;
+}
+
+/* Hero */
+.hero {
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+  padding: 0 15%;
+  margin-bottom: 60px;
+  background: #fff;
+  margin-top: -60px;
+}
+
+.hero .hero-text {
+  width: 50%;
+}
+
+.hero .hero-text h2 {
+  font-size: 54px;
+  font-weight: 800;
+  margin: 0;
+}
+
+.hero .hero-text p {
+  font-size: 16px;
+  width: 77%;
+}
+
+.hero .hero-image {
+  width: 50%;
+}
+
+.hero .hero-image img {
+  width: 100%;
+}
+
+.hero .btn {
+  margin-top: 20px;
 }
 
 /* Todo */
 .todos .heading {
   margin: 0 0 10px;
   font-size: 22px;
-  color: #363636;
+  color: var(--font-color);
 }
 
 .todos .todo-input {
@@ -53,10 +148,15 @@ body {
   width: 100%;
   height: 40px;
   border-radius: 5px;
-  border: 1px solid #ccc;
+  border: 1px solid var(--secondary-color);
   padding: 0 15px;
   font-size: 16px;
-  color: #363636;
+  color: var(--font-color);
+  background: #fff;
+}
+
+.todos .todo-input input::placeholder {
+  color: var(--font-color);
 }
 
 .todos .todo-input input:focus {
@@ -73,21 +173,17 @@ body {
   top: 2px;
   margin-left: 10px;
   cursor: pointer;
-  color: #000051;
+  color: var(--primary-dark);
 }
 
 .todos .todo-list .todo {
-  background: #fff;
+  background: var(--secondary-color);
   padding: 12px 20px;
   border-radius: 10px;
   margin-bottom: 10px;
   display: flex;
   align-items: center;
   justify-content: flex-start;
-}
-
-.todos .todo-list .todo.completed {
-  background: #e7e7ff;
 }
 
 .todos .todo-list .todo:last-of-type {
@@ -102,7 +198,8 @@ body {
   margin: 0;
   font-size: 16px;
   margin-left: 12px;
-  color: #363636;
+  color: var(--font-color);
+  text-transform: capitalize;
 }
 
 .todos .todo-list .todo.completed h2 {
@@ -119,28 +216,140 @@ body {
   position: relative;
   top: 2px;
   cursor: pointer;
-  color: #760000;
+  color: var(--primary-dark);
 }
 
 .todos .todo-list p {
   text-align: center;
   font-size: 16px;
-  color: #363636;
+  color: var(--font-color);
   margin: 26px 0 0;
 }
 
 /* Footer */
 .footer {
-  background: #000051;
+  background: var(--primary-color);
   text-align: center;
   padding: 25px 5%;
-  margin-top: 40px;
+  margin-top: 60px;
+  color: var(--font-color);
+  border-top: 5px solid var(--secondary-color);
+  font-size: 14px;
+}
+
+/* Login */
+.lg-container {
+  display: grid;
+  place-items: center;
+}
+
+.login {
+  width: 100%;
+  max-width: 400px;
+}
+
+.login .login-head {
+  text-align: center;
+}
+
+.login .login-head img {
+  width: 100%;
+  max-width: 180px;
+}
+
+.login .form-group {
+  margin-bottom: 20px;
+}
+
+.login .form-group .form-control {
+  width: 100%;
+  height: 40px;
+  padding: 0 15px;
+  border: 1px solid var(--font-color);
+  border-radius: 5px;
+  color: var(--font-color);
+  font-size: 16px;
+}
+
+.login .form-group span {
+  color: red;
+  font-size: 14px;
+}
+
+.login input[type=submit] {
+  width: 100%;
+  height: 40px;
+  border: 0;
+  padding: 0;
+  border-radius: 5px;
+  background: #000;
   color: #fff;
+  cursor: pointer;
+}
+
+@media(max-width: 1600px) {
+  .hero .hero-text p {
+    width: 93%;
+  }
+
+  .hero {
+    padding: 0 5%;
+  }
+}
+
+@media(max-width: 1199px) {
+  .hero .hero-text h2 {
+    font-size: 40px;
+    line-height: 1.3;
+  }
+}
+
+@media(max-width: 991px) {
+  .hero {
+    flex-direction: column;
+    padding: 5% 5% 0;
+  }
+
+  .hero .hero-text {
+    text-align: center;
+  }
+}
+
+@media(max-width: 767px) {
+  .hero .hero-text {
+    width: 100%;
+  }
+
+  .hero .hero-text p {
+    width: 80%;
+    margin: 15px auto 0;
+  }
+
+  .hero .hero-image {
+    width: 100%;
+  }
 }
 
 @media(max-width: 480px) {
-  .container {
-    padding: 20px;
-    min-height: calc(100vh - 237px);
+  .navbar .navbar-brand a img {
+    width: 30px;
+    margin-right: 5px;
+  }
+
+  .navbar .navbar-brand a {
+    font-size: 16px;
+  }
+
+  .navbar .nav-items li a {
+    font-size: 14px;
+    margin-right: 15px;
+  }
+
+  .hero .hero-text h2 {
+    font-size: 32px;
+  }
+
+  .hero .hero-text p {
+    width: 100%;
   }
 }
